# Tic-Tac-Tython

./: .gitignore  README.md  ai_player.py  board.py  console.py  game.py  main.py  player.py  player_ai.py  player_easy_ai.py  player_factory.py  player_human.py  pyproject.toml  requirements.txt  test_ai_player.py  test_board.py  test_console.py  test_game.py  test_main.py
src/tic_tac_toe/: ai_player.py  console.py  game.py  main.py  player_factory.py
src/tic_tac_toe/player/: ai_player.py  human_player.py  player.py
tests/: conftest.py  test_ai_player.py  test_board.py  test_console.py  test_game.py  test_human_player.py  test_main.py  test_player_easy_ai.py  test_player_factory.py
