[project]
name = "tic-tac-toe"
version = "0.1.0"
description = "Tic-Tac-Toe with an unbeatable AI"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
tic-tac-tython = "tic_tac_toe.main:main"